--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,20 @@ Package: CleanR
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    c(person(given = "Heather",
+           family = "Van Tassel",
+           role = c("aut"),
+           email = "first.last@example.com"),
+     person(given = "Phuntsok",
+           family = "Tseten",
+           role = c("aut"),
+           email = "first.last@example.com"),
+     person(given = "Patrick",
+           family = "Tung",
            role = c("aut", "cre"),
-           email = "first.last@example.com")
-Description: What the package does (one paragraph).
-License: What license it uses
+           email = "tung_patrick@yahoo.com")
+           )
+Description: This package cleans a dataset and returns summary statistics as well as number, proportion and location of NA values for string and number column inputs. Data cleaning made easy!
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
